syntax = "proto3";
package events;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "internal/protobufs/events_grpc";

message Event {
  uint32 id = 1;
  string title = 2;
  google.protobuf.Timestamp start_at = 3;
  google.protobuf.Timestamp end_at = 4;
  string description = 5;
  uint32 user_id = 6;
  google.protobuf.Timestamp notify_at = 7;
}

message EventsQuery {
  uint32 user_id = 1;
  google.protobuf.Timestamp from = 2;
}

message EventsResponse {
  repeated Event events = 1;
}

message DeleteEventRequest {
  uint32 userId = 1;
  uint32  eventId = 2;
}

service Events {
  rpc GetEventsDay(EventsQuery) returns (EventsResponse);
  rpc GetEventsWeek(EventsQuery) returns (EventsResponse);
  rpc GetEventsMonth(EventsQuery) returns (EventsResponse);
  rpc AddEvent(Event) returns (google.protobuf.Empty);
  rpc UpdateEvent(Event) returns (google.protobuf.Empty);
  rpc DeleteEvent(DeleteEventRequest) returns (google.protobuf.Empty);
}

